@@ -1,3 +1,12 @@
+2010-07-02  Vincent Torri  <doursse at users dot sf dot net>
+
+	* src/bin/epdf_esmart_test.c:
+	* src/bin/epdf_evas_test.c:
+	Fix returned type of callbacks
+
+	* src/lib/mupdf/Makefile.am:
+	fix parallel builds with the mupdf backend
+
 2010-06-25  Vincent Torri  <doursse at users dot sf dot net>
 
 	* src/lib/mupdf/epdf_mupdf_page.c:
